# sts-spec-test-automation

./: .gitignore  README.md  launcher.bat  launcher.command  launcher.py  pyproject.toml  requirements.txt
.cursor/rules/: api-tester.mdc
config/: env.example
data/: cadsr_alternate_values_cases.json  cadsr_draft_new_cases.json  cadsr_multi_concept_cdes_cases.json
data/data-models-yaml/: README.md
docs/: ARCHITECTURE_REVIEW.md  FRAMEWORK.md  ONBOARDING.md  RUNBOOK.md
parser_agent/: config.py  detect.py  main.py  report.py  summarize.py
reports/C3DC/: report_2026-03-18T17-28-02.html  report_2026-03-18T17-28-02.json  report_2026-03-20T09-48-55.html  report_2026-03-20T09-48-55.json  report_2026-03-20T15-15-39.html  report_2026-03-20T15-15-39.json
reports/CCDI/: report_2026-03-18T17-25-25.html  report_2026-03-18T17-25-25.json  report_2026-03-20T09-46-07.html  report_2026-03-20T09-46-07.json  report_2026-03-20T15-11-32.html  report_2026-03-20T15-11-32.json
reports/CCDI-DCC/: report_2026-03-18T17-26-04.html  report_2026-03-18T17-26-04.json  report_2026-03-20T09-46-47.html  report_2026-03-20T09-46-47.json  report_2026-03-20T15-12-33.html  report_2026-03-20T15-12-33.json
reports/CDS/: report_2026-03-18T17-24-45.html  report_2026-03-18T17-24-45.json  report_2026-03-20T09-45-24.html  report_2026-03-20T09-45-24.json  report_2026-03-20T15-10-22.html  report_2026-03-20T15-10-22.json
reports/CRDC/: report_2026-03-18T17-30-38.html  report_2026-03-18T17-30-38.json  report_2026-03-20T09-51-47.html  report_2026-03-20T09-51-47.json  report_2026-03-20T15-19-52.html  report_2026-03-20T15-19-52.json
reports/CRDCSearch/: report_2026-03-18T17-31-21.html  report_2026-03-18T17-31-21.json  report_2026-03-20T09-52-34.html  report_2026-03-20T09-52-34.json  report_2026-03-20T15-20-58.html  report_2026-03-20T15-20-58.json
reports/CRDCSubmission/: report_2026-03-18T17-31-58.html  report_2026-03-18T17-31-58.json  report_2026-03-20T09-53-14.html  (+3 more)
scripts/: parser_agent_hook.sh  run_all_models.py  run_all_term_verify.sh  run_autogenerated_tests.py  run_full_suite.sh  run_manual_tests.sh  run_perf_tests.sh
spec/: v2.yaml
tests/: conftest.py  test_model_pvs_skip_oob_shape.py  test_pagination_assert_shape.py
ui/: app.py
(+87 files in other folders)
